style.css
.header-container {
    position: absolute;
    width: 100%;
    height: 65px;
    z-index: 3;
    display: grid;
    place-items: center;
    background: rgba(13, 107, 165, 0.3);
}

.logotipo {
    position: absolute;
    width: 110px;
    left: 55px;
}

.search {
    position: absolute;
	right: 0;
}

.search li {
    display: inline;
    margin: 0 70px 0 0;
}

.search a {
    text-transform: uppercase;
    text-decoration: none;
    color: white;
    font-weight: bold;
}

.search a:hover {
    text-decoration: underline;
    color: turquoise;
}

.section {
    position: relative;
    width: 100%;
    height: 100vh;
    display: flex;
    overflow: hidden;
}

.description {
    color: white;
    text-align: left;
    width: 80%;
    height: 200px;
    font-size: 20px;
    padding: 90px 0 0 30px;
    margin: 25px;
    z-index: 2;
}

.description h3, h1 {
    text-transform: uppercase;
}

.video-container {
    right: 0;
    bottom: 0;
    width: 100%;
    height: 100vh;
}

.video {
    position: absolute;
    right: 0;
    bottom: 0;
}

.color-overflow {
    position: absolute;
    right: 0;
    bottom: 0;
    background-color: lightblue;
    width: 100%;
    height: 100vh;
    opacity: 0.2;
    z-index: 1;
}

.icon-wrapper {
    position: absolute;
    width: 400px;
    height: 20px;
    z-index: 4;
    display: grid;
    place-items: center;
    padding: 320px;
}

.social-networks {
    position: absolute;
	left: 50px;
}

.social-networks li {
    display: inline;
}

.social-networks a {
    float: left;
	margin-right: 20px;
	transition: all .4s ease-out;
}

.social-networks a:hover {
    cursor: pointer;
	box-shadow: 4px 15px 16px 0px rgba(50, 50, 50, 0.45);
	transform: translateY(-5px);
}

.icon {
    width: 20px;
    height: 20px;
    float: left;
    margin-left: 10px;
    border-radius: 50%;
}

.icon#facebook {
    background-color: #2372a3;
}

.icon#instagram {
    background-color: #d62976;
}

.icon#twitter {
    background-color: #0084b4;
}

.icon#youtube {
    background-color:  #b00;
}

.carousel {
    position: absolute;
    padding: 400px 45px 0 45px;
    max-width: 820px;
    margin: 0 60px;
    z-index: 2;
}

.gallery-wrapper {
    overflow-x: auto;
}

.gallery {
    display: flex;
    flex-flow: row nowrap;
    gap: 15px;
}

.arrow-left, .arrow-right {
    position: absolute;
    top: 500px;
    left: 0;
    right: auto;
    bottom: 100px;
    font-size: 25px;
    line-height: 60px;
    width: 40px;
    text-align: center;
    color: white;
    cursor: pointer;
    border: none;
    border-radius: 50%;
    background: linear-gradient(to left, transparent 0%, black 200%);
    opacity: 0.5;
    transition: all 500ms ease-in-out;
}

.arrow-right {
    left: auto;
    right: 0;
    background: linear-gradient(to right, transparent 0%, black 200%);
}

.arrow-left:hover, .arrow-right:hover {
    opacity: 1;
}

.item {
    width: 250px;
    height: 250px;
    flex-shrink: 0;
    border-radius: 50%;
    opacity: 0.5;
    transition: all 600ms ease-in-out;
    border: 5px solid lightblue;
    box-shadow: 0 0 10px lightblue;
}

.current-item {
    opacity: 1;
    border: 5px solid turquoise;
    box-shadow: 0 0 10px turquoise;
}

/* Hide scrollbar for Chrome, Safari and Opera */
/* https://www.w3schools.com/howto/howto_css_hide_scrollbars.asp */
.gallery-wrapper::-webkit-scrollbar {
    display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.gallery-wrapper {
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
}

